Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-27621

Invalid Access Log Path Crashes memcached

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 5.5.0
    • 3.1.6, 4.0.0, 4.1.2, 4.5.1, 4.6.3, 5.0.1, 5.5.0
    • couchbase-bucket
    • None
    • Triaged
    • Unknown

    Description

      Some customers like to set the access log path to a custom location. If this path does not exist, memcached will throw an unhandled exception trying to generate the access log.

      Backtrace shows the AccessScanner's visitor task calls open on the MutationLog without handing the read exception.

      Recreated on 4.6.3 by setting the access log path as follows:

      curl -i -u Administrator:password --data 'ns_bucket:update_bucket_props("default", [{extra_config_string, "alog_path=/mnt/haiko/does_not_exist"}]).' http://localhost:8091/diag/eval
      /etc/init.d/couchbase-server restart
      /opt/couchbase/bin/cbepctl localhost:11210 -b default set flush_param alog_sleep_time 2
      

      Log from repro:
      https://s3.amazonaws.com/cb-engineering/davidH/collectinfo-2018-01-17T142039-ns_1%4010.112.163.101.zip

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dhaikney David Haikney (Inactive)
            dhaikney David Haikney (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty