MB-27621: Stop server crash when trying to open an access log with an invalid path

To do this we wrap the entire set up of the task in a try-catch and
log the exception produced if the creation fails. This allows the
task to be reshecduled at a later date.

Also adds an associated test.

Change-Id: I0ef2e833f431fee548bab477fe843ca9eb280477
Reviewed-on: http://review.couchbase.org/87980
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>